[gd_scene load_steps=22 format=3 uid="uid://c2k6lpae18q8v"]

[ext_resource type="Script" path="res://scenes/shop/shop.gd" id="1_oqoy8"]
[ext_resource type="Texture2D" uid="uid://bj3im6egs4wxx" path="res://art/tile_0086.png" id="2_41omk"]
[ext_resource type="Resource" uid="uid://cy5rtyb7a4hpp" path="res://relics/coupons.tres" id="2_ccxow"]
[ext_resource type="Resource" uid="uid://b11jhsqqh7kfe" path="res://relics/explosive_barrel.tres" id="3_7lk2o"]
[ext_resource type="Texture2D" uid="uid://cvtonr5sinxbx" path="res://art/shopkeeper_blink.png" id="3_uthr0"]
[ext_resource type="PackedScene" uid="uid://d24w6bygugbhd" path="res://scenes/shop/shop_card.tscn" id="4_2u2et"]
[ext_resource type="Resource" uid="uid://dn6frpxqh1o7" path="res://relics/mana_potion.tres" id="4_4u268"]
[ext_resource type="Resource" uid="uid://c8c1y85x2h5l" path="res://relics/reinforced_armor.tres" id="5_8ym3b"]
[ext_resource type="PackedScene" uid="uid://c743ur8hoxsn5" path="res://scenes/ui/card_tooltip_popup.tscn" id="5_jjnl3"]
[ext_resource type="PackedScene" uid="uid://dlt6561ywjx8m" path="res://scenes/shop/shop_relic.tscn" id="5_m1t66"]
[ext_resource type="Resource" uid="uid://bkmq76jcysxaf" path="res://relics/blinding_potion.tres" id="6_t35ch"]
[ext_resource type="Resource" uid="uid://b7xh51rkdccfy" path="res://relics/confusing_staff.tres" id="7_wrryf"]
[ext_resource type="Resource" uid="uid://r6aixmaucd4b" path="res://relics/wooden_sword.tres" id="8_rq1it"]
[ext_resource type="PackedScene" uid="uid://ctvxie3ni1ik4" path="res://scenes/modifier_handler/modifier_handler.tscn" id="11_863hj"]
[ext_resource type="PackedScene" uid="uid://bqefj5q31b84i" path="res://scenes/modifier_handler/modifier.tscn" id="12_xf6l8"]

[sub_resource type="Gradient" id="Gradient_sv6qe"]
offsets = PackedFloat32Array(0.2125, 1)
colors = PackedColorArray(0.0291667, 0.0291667, 0.0291667, 1, 0.258824, 0.145098, 0.133333, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lpow7"]
gradient = SubResource("Gradient_sv6qe")
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 1)
metadata/_snap_enabled = true
metadata/_snap_count = 8

[sub_resource type="Animation" id="Animation_wctye"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shopkeeper:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_41omk")]
}

[sub_resource type="Animation" id="Animation_1lyhw"]
resource_name = "blink"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shopkeeper:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_uthr0"), ExtResource("2_41omk")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c4845"]
_data = {
"RESET": SubResource("Animation_wctye"),
"blink": SubResource("Animation_1lyhw")
}

[sub_resource type="LabelSettings" id="LabelSettings_cywyj"]
font_size = 12

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_oqoy8")
shop_relics = Array[Resource("res://custom_resources/relic.gd")]([ExtResource("2_ccxow"), ExtResource("3_7lk2o"), ExtResource("4_4u268"), ExtResource("5_8ym3b"), ExtResource("6_t35ch"), ExtResource("7_wrryf"), ExtResource("8_rq1it")])

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="Background" type="TextureRect" parent="BackgroundLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_lpow7")

[node name="DecorationLayer" type="CanvasLayer" parent="."]

[node name="Shopkeeper" type="TextureRect" parent="DecorationLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -90.0
offset_right = 90.0
offset_bottom = -10.0
grow_vertical = 0
texture = ExtResource("2_41omk")
expand_mode = 1
stretch_mode = 5

[node name="ShopkeeperAnimation" type="AnimationPlayer" parent="DecorationLayer"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_c4845")
}

[node name="BlinkTimer" type="Timer" parent="DecorationLayer"]
unique_name_in_owner = true
one_shot = true

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Title" type="Label" parent="UILayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 27.0
offset_top = -49.0
offset_right = 67.0
offset_bottom = -37.0
grow_horizontal = 2
grow_vertical = 2
text = "Shop"
label_settings = SubResource("LabelSettings_cywyj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="UILayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = -34.0
offset_right = -58.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
text = "Leave"

[node name="ShopContent" type="VBoxContainer" parent="UILayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.5
offset_top = -35.0
offset_right = 120.5
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2

[node name="Cards" type="HBoxContainer" parent="UILayer/ShopContent"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 15

[node name="ShopCard" parent="UILayer/ShopContent/Cards" instance=ExtResource("4_2u2et")]
layout_mode = 2

[node name="ShopCard2" parent="UILayer/ShopContent/Cards" instance=ExtResource("4_2u2et")]
layout_mode = 2

[node name="ShopCard3" parent="UILayer/ShopContent/Cards" instance=ExtResource("4_2u2et")]
layout_mode = 2

[node name="Relics" type="HBoxContainer" parent="UILayer/ShopContent"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 15

[node name="ShopRelic" parent="UILayer/ShopContent/Relics" instance=ExtResource("5_m1t66")]
layout_mode = 2

[node name="ShopRelic2" parent="UILayer/ShopContent/Relics" instance=ExtResource("5_m1t66")]
layout_mode = 2

[node name="ShopRelic3" parent="UILayer/ShopContent/Relics" instance=ExtResource("5_m1t66")]
layout_mode = 2

[node name="CardTooltipPopup" parent="UILayer" instance=ExtResource("5_jjnl3")]
unique_name_in_owner = true
visible = false

[node name="ModifierHandler" parent="." instance=ExtResource("11_863hj")]

[node name="ShopCostModifier" parent="ModifierHandler" instance=ExtResource("12_xf6l8")]
type = 3

[connection signal="pressed" from="UILayer/BackButton" to="." method="_on_back_button_pressed"]
